# roadmap

./: LICENSE  README.md
back/: .env  .env.example  .gitignore  Cargo.toml
back/migrations/: 20230104161637_init.down.sql  20230104161637_init.up.sql  20230104162911_init_attachments.down.sql  20230104162911_init_attachments.up.sql  20230104162918_init_connections.down.sql  20230104162918_init_connections.up.sql
back/src/: main.rs
back/src/adapters/: mod.rs
back/src/adapters/actix/: main.rs
back/src/adapters/axum/: main.rs
back/src/adapters/server/: main.rs
back/src/adapters/sqlx/: mod.rs
back/src/connector/: db.rs  routes.rs  server.rs
back/src/routes/: mod.rs  node.rs  root.rs  types.rs
deploy/: docker-compose.yml
