[package]
name = "roadmap"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
axum = "0.6.1"
dotenv = "0.15.0"
serde = "1.0.151"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
