[package]
name = "roadmap"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
dotenv = "0.15.0"
futures = "0.3.25"
rustls = "0.20.7"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres" ] }
tokio = { version = "1.23.0", features = ["full"] }
